# chatterbox-multilingual-tts

./: .gitignore  README.md  __init__.py  info_output.json  mtl_tts.py  pyproject.toml  requirements.txt  test_latency.py  test_local.py
deploy/: README.md  main.py  upload_voices.py
livekit/: chatterbox_tts.py  livekit_agent.py  requirements.txt
models/s3gen/: flow.py  flow_matching.py  s3gen.py
models/s3tokenizer/: __init__.py
models/t3/: __init__.py  t3.py
models/t3/modules/: cond_enc.py  perceiver.py  t3_config.py
models/tokenizers/: __init__.py
models/voice_encoder/: voice_encoder.py
src/chatterbox/: tts.py
src/chatterbox/models/s3gen/: flow.py  s3gen.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py
