[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterbox-mtl"
version = "1.0.0"
description = "Fast Multilingual Text-to-Speech with 23 language support (~200ms latency)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Resemble AI", email = "team@resemble.ai"},
]
keywords = ["tts", "text-to-speech", "multilingual", "speech-synthesis", "chatterbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<2.7.0",
    "torchaudio>=2.0.0,<2.7.0",
    "numpy>=1.24.0,<1.26.0",
    "librosa>=0.10.0",
    "transformers>=4.40.0",
    "diffusers>=0.29.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
    "resemble-perth>=1.0.1",
    "conformer>=0.3.2",
    "s3tokenizer",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "pyloudnorm",
    "omegaconf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.py-modules]
include = ["mtl_tts"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
